Added task types templates
